# terse

./: .gitignore  Cargo.toml  README.md  hook_input.json  install.ps1  install.sh
.claude/plans/: TERSE-FINAL-Plan.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: adding-optimizers.md
scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
src/: lib.rs  main.rs
src/analytics/: events.rs  logger.rs  mod.rs  reporter.rs
src/cli/: mod.rs
src/config/: mod.rs  schema.rs
src/hook/: mod.rs  protocol.rs
src/llm/: config.rs  mod.rs  ollama.rs  prompts.rs  validation.rs
src/matching/: mod.rs
src/optimizers/: build.rs  docker.rs  file.rs  generic.rs  git.rs  mod.rs
src/preprocessing/: dedup.rs  mod.rs  noise.rs  path_filter.rs  trim.rs  truncation.rs
src/router/: decision.rs  mod.rs
src/run/: mod.rs
src/safety/: circuit_breaker.rs  classifier.rs  mod.rs
src/utils/: mod.rs  process.rs  token_counter.rs
src/web/: api.rs  frontend.rs  mod.rs
tests/: cross_platform_tests.rs  llm_tests.rs  optimizer_tests.rs  router_tests.rs
