[package]
name = "terse"
version = "0.1.3"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
dirs = "5.0"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"
toml = "0.8"
ureq = { version = "2.12", features = ["json"] }
